# test-ode

./: .gitignore  CMakeLists.txt  README.md  comp.agr  comp.par  cvode_stiff_test.cpp  stiff_system.cpp  stiff_system_rk-ck54.cpp
react/: Simple-plasma.ipynb  listreact.py  metaplasma.r4  react.g4  react.tokens  reactLexer.py  reactParser.py  reactVisitor.py  robertson.r4
